important - fixed overflow issues

--- a/css/abt-me-css.css
+++ b/css/abt-me-css.css
@@ -1,22 +1,18 @@
-#image-div
+body
 {
-	width: 100%;
-	text-align: center;
+    overflow: hidden;
+    background-color: black;
 }
 
-#image
+.page-title
 {
-	padding: 20pt;
-	width: 21%;
-}
-
-
-#div-para
-{
-	font-size: 2em;
-	padding: 5pt;
-	width: 60%;
-	margin: 0 auto;
-	text-align: left;
-
+    max-width: 100vw;
+    margin: auto;
+    padding-bottom: 5%;
+    padding-top: 5%;
+	display: flex;
+	color: white;
+	align-items: center;
+	align-content: center;
+    justify-content: center;
 }
