--- a/css/blog.css
+++ b/css/blog.css
@@ -4,31 +4,36 @@ a
 }
 img
 {
-	widows: 100%;
+	width: 100%;
 }
 body
 {
 	width: 100vw;
 	background-color: black;
-	overflow: none;
+/*	overflow: none;*/
 }
 .page-title
 {
-	padding: 5% 50vw;
-	width: 100%;
+    max-width: 100vw;
+    margin: auto;
+    padding-bottom: 5%;
+    padding-top: 5%;
 	display: flex;
 	color: white;
 	align-items: center;
 	align-content: center;
+    justify-content: center;
 }
 .main-body
 {
+    margin: 0;
+    overflow: none;
+    padding: 1rem;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 0 3%;
 }
 .blog-post
 {
@@ -38,7 +43,6 @@ body
 	background-color: white;
 	display: flex;
 	align-items: center;
-	margin: 1rem;
 	padding: 3rem;
 	border-radius: 12px;
 }
@@ -94,6 +98,7 @@ body
 {
 	.main-body
 	{
+        margin: 0;
 		align-items: center;
 	}
 	.blog-post
