--- a/css/navbar-updates.css
+++ b/css/navbar-updates.css
@@ -5,13 +5,13 @@
 
 }
 nav{
+    margin: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
     background-color: #000;
 	font-family: 'Anonymous Pro', monospace;
-    
 }
 .logo{
     color:whitesmoke;
@@ -22,7 +22,7 @@ nav{
 .nav-links{
     display: flex;
     justify-content: space-around;
-    width: 40%;
+    width: 30%;
     z-index: 1;
 }
 .nav-links li{
@@ -47,14 +47,18 @@ nav{
     transition: all 0.7s ease;
 }
 @media screen and (max-width:1024px){
+    body{
+/*        overflow: hidden;*/
+    }
+
 .nav-links{
         width: 60%;
     }
 }
-@media screen and (max-width:785px){
+@media screen and (max-width:780px){
         .nav-links{
             position: absolute;
-            right:0px;
+            right:0vw;
             height:92vh;
             top:8vh;
             background-color: #000;
@@ -62,8 +66,9 @@ nav{
             flex-direction: column;
             align-items: center;
             width:50%;
-            transform: translatex(100%);
-            transition:transform 0.5s ease-in;
+/*            transform: translatex(100%);*/
+/*            z-index: -1;*/opacity: 0;
+/*            transition:transform 0.5s ease-in;*/   
         }
         .nav-links li{
             opacity:0;
@@ -73,9 +78,25 @@ nav{
         }
 }
     .nav-active{
-        transform: translateX(0%);
+/*        z-index: 1;*/
+        animation: test 0.5s;
+        animation-fill-mode: forwards;
+/*        transform: translateX(0%);*/
     }
-
+@keyframes test
+{
+   from
+    {
+        opacity: 0;
+/*        z-index: -1;*/
+    }
+    to
+    {
+        opacity: 1;
+/*        z-index: 1;*/
+    }
+}
+/*li flying in effect*/
     @keyframes navLinkFade{
         from{
             opacity: 0;
