--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,10 @@ body
 	font-size: 5vw;
 	color: white;
 }
+
+@media screen and (max-width:780px){
+    body
+    {
+        overflow: none;
+    }
+}
